@@ -4511,9 +4511,6 @@
                     "method": "ppa",
                     "enable-ppa": "ppa:obsproject/obs-studio",
                     "source-file": "obsproject-ubuntu-obs-studio-CODENAME"
-                },
-                "artful": {
-                    "method": "skip"
                 }
             },
             "working": true
