@@ -1,7 +1,8 @@
 {
     "17.10.13": {
         "del": {
-            "recentnotifications": "broken"
+            "recentnotifications": "broken",
+            "obs-studio": "add-source"
         }
     },
     "17.10.12": {
