@@ -1,6 +1,7 @@
 ubuntu-mate-welcome (17.10.13) UNRELEASED; urgency=medium
 
   * Update Recenct Notifications so it is only available for Xenial.
+  * Update OBS for Artful.
 
  -- Martin Wimpress <martin@ubuntu-mate.org>  Mon, 04 Sep 2017 21:23:25 +0100
 
